# rpg-world-forge

./: .gitattributes  .gitignore  .gitleaksignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
agents/: ORCHESTRATION.md  QUALITY_GATES.md  README.md  WORLD_CREATION_PHASES.md
contracts/: README.md  catalog.json
docs/: ARCHITECTURE.md  ASSET_PIPELINE.md  AUDIT_2026-07-19.md  AUDIT_M2_2026-07-19.md  AUDIT_M2_5_2026-07-19.md  AUDIT_M3_2026-07-19.md  AUDIT_M4_2026-07-19.md  AUDIT_M5_2026-07-21.md  AUDIT_M6_2026-07-24.md  CONTENT_PIPELINE.md  GAME_IMPLEMENTATION_PHASES.md  M1_SYSTEMS.md  M2_5_PRESENTATION.md  M2_NARRATIVE.md  M3_LIVING_WORLD.md  M4_MULTIPLE_WORLD_PRODUCTION.md  NARRATIVE_MODEL.md  PYRAY_RUNTIME_GUIDE.md  ROADMAP.md
schemas/: asset-inventory.schema.json  asset-license-record.schema.json  asset-manifest.schema.json  asset-processing-receipt.schema.json  asset-processing-recipe.schema.json  asset-production-receipt.schema.json  asset-production-request.schema.json  asset-qa-report.schema.json  asset-spec.schema.json  asset-target.schema.json  assetpack.schema.json  audio-bible.schema.json  clipset.schema.json  composed-runtime-bundle.schema.json  composed-runtime-catalog.schema.json  contract-catalog.schema.json  forge-workspace.schema.json  living-world.schema.json  map-source.schema.json  modly-capability-discovery.schema.json  narrative-analysis.schema.json  narrative-content.schema.json  phase-report.schema.json  renderpack.schema.json  replay.schema.json  runtime-adapter.schema.json  runtime-bundle.schema.json  runtime-capability-catalog.schema.json  runtime-compatibility-report.schema.json  runtime-composition.schema.json  runtime-presentation-profile.schema.json  save.schema.json  shared-assets.schema.json  source-manifest.schema.json  studio-changeset.schema.json  studio-job.schema.json  studio-protocol.schema.json  task-claim.schema.json  visual-bible.schema.json  world-catalog.schema.json  (+2 more)
scripts/: build_release.py  generate_m5_neutral.py  studio_runtime_assembly.py  studio_runtime_inputs.py  studio_runtime_sources.py  verify_m5_release.py
tests/: m6_pyray_3d_fixture.py  pyray_3d_abi_smoke.py  pyray_3d_native_smoke.py  raylib_cpu_media_smoke.py  raylib_smoke.py  test_architecture.py  test_bundle_publication.py  test_content_pipeline.py  test_contract_catalog.py  test_game_boundary_policy.py  test_m1_systems.py  test_m2_5_assets.py  test_m2_narrative.py  test_m3_living_world.py  test_m4_bundle.py  test_m4_cli.py  test_m4_content.py  test_m4_game_scaffold.py  test_m4_world_lifecycle.py  test_m5_asset_io.py  test_m5_assetpack_3d.py  test_m5_inventory.py  test_m5_neutral_fixture.py  test_m5_plan.py  test_m5_processing.py  test_m5_production.py  test_m5_release_builder.py  test_m5_release_readiness.py  test_m5_renderpack_release.py  test_m5_toolchain.py  (+27 more)
(+452 files in other folders)
