[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-world-forge"
version = "0.7.0"
description = "World-agnostic GPT-led RPG authoring forge with a deterministic Python/raylib runtime"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "DrHepa" }]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment :: Role-Playing",
]

[project.urls]
Homepage = "https://github.com/DrHepa/rpg-world-forge"
Repository = "https://github.com/DrHepa/rpg-world-forge"
Issues = "https://github.com/DrHepa/rpg-world-forge/issues"

[project.optional-dependencies]
game = ["raylib>=6.0.1,<7"]
asset-production = ["Pillow==12.2.0"]
dev = ["Pillow==12.2.0", "ruff>=0.6,<1"]

[project.scripts]
isoworld = "isoworld.__main__:main"
worldforge = "worldforge.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
worldforge = ["templates/pyray_game/*.tmpl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
